# root-batch-viewer

./: .gitmodules  CMakeLists.txt  README.md
assets/uml/: uml.wsd
include/: application.hpp  browser.hpp  button.hpp  container.hpp  parser.hpp  plot.hpp  process.hpp  rect.hpp  text.hpp  widget.hpp
src/: application.cpp  browser.cpp  button.cpp  container.cpp  main.cpp  parser.cpp  plot.cpp  rect.cpp  text.cpp  widget.cpp
